--- a/build.gradle
+++ b/build.gradle
@@ -47,19 +47,19 @@ uploadArchives {
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-              authentication(userName: sonatypeUsername, password: sonatypePassword)
+				authentication(userName: sonatypeUsername, password: sonatypePassword)
             }
 
             pom.project {
-               name 'GradleFx'
+               name 'XMLSerializer4j'
                packaging 'jar'
-               description 'GradleFx is a Gradle plugin for building Flex and Actionscript applications'
-               url 'http://gradlefx.github.com/'
+               description ' High performance XML serialization library for Java'
+               url 'https://github.com/martinwithaar/XMLSerializer4j/'
 
                scm {
-                   url 'scm:git@github.com:GradleFx/GradleFx.git'
-                   connection 'scm:git@github.com:GradleFx/GradleFx.git'
-                   developerConnection 'scm:git@github.com:GradleFx/GradleFx.git'
+                   url 'https://github.com/martinwithaar/XMLSerializer4j.git'
+                   connection 'https://github.com/martinwithaar/XMLSerializer4j.git'
+                   developerConnection 'https://github.com/martinwithaar/XMLSerializer4j.git'
                }
 
                licenses {
