--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -4,7 +4,8 @@ connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.gradle.user.home=null
 connection.java.home=null
 connection.jvm.arguments=
-connection.project.dir=
+connection.project.dir=..\\FehuGradle
+derived.resources=.gradle,build
 eclipse.preferences.version=1
 natures=org.eclipse.jdt.core.javanature
-project.path=\:
+project.path=\:XMLSerializer4j
